main/default/objects/Azure_Dev_Ops_API_Settings__c/Azure_Dev_Ops_API_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Azure Dev Ops API Settings</label>
</CustomObject>