main/default/objects/Azure_Dev_Ops_API_Settings__c/fields/Auto_Relate_Tickets_With_Similar_Errors__c.field-meta.xml
<CustomField>
    <fullName>Auto_Relate_Tickets_With_Similar_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Relate Tickets With Similar Errors</label>
    <type>Checkbox</type>
</CustomField>