main/default/objects/Azure_Dev_Ops_API_Settings__c/fields/Automatically_update_ticket_priority__c.field-meta.xml
<CustomField>
    <fullName>Automatically_update_ticket_priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically update ticket priority</label>
    <type>Checkbox</type>
</CustomField>