main/default/objects/Azure_Dev_Ops_API_Settings__c/fields/Create_Unique_Tickets_by_Org__c.field-meta.xml
<CustomField>
    <fullName>Create_Unique_Tickets_by_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Unique Tickets by Org</label>
    <type>Checkbox</type>
</CustomField>