main/default/objects/Azure_Dev_Ops_API_Settings__c/fields/Synchronize_completed_Status__c.field-meta.xml
<CustomField>
    <fullName>Synchronize_completed_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synchronize completed Status</label>
    <type>Checkbox</type>
</CustomField>