main/default/objects/Azure_Dev_Ops_API_Settings__c/fields/Synchronize_related_tickets_and_issues__c.field-meta.xml
<CustomField>
    <fullName>Synchronize_related_tickets_and_issues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synchronize related tickets and issues</label>
    <type>Checkbox</type>
</CustomField>